--- a/machine-learning/customer-personality-analysis-and-segmentation/customer-personality.ipynb
+++ b/machine-learning/customer-personality-analysis-and-segmentation/customer-personality.ipynb
@@ -1608,7 +1608,7 @@
         "outputId": "8a73c8b7-5a48-422d-df9b-bc5c9eecdaa6"
       },
       "source": [
-        "filepath = '/content/drive/MyDrive/Notebook Builds/Customer Personality Analysis/marketing_campaign.csv'\n",
+        "filepath = 'https://raw.githubusercontent.com/insaid2018/project-gallery/main/data/marketing_campaign.csv'\n",
         "data = pd.read_csv(filepath_or_buffer=filepath)\n",
         "print('Data Shape:', data.shape)\n",
         "data.head()"
