--- a/machine-learning/weather-prediction-in-austraila/notebook.ipynb
+++ b/machine-learning/weather-prediction-in-austraila/notebook.ipynb
@@ -2987,7 +2987,7 @@
         "outputId": "6c9fff08-b9f0-43d8-9827-72f5c7f69d07"
       },
       "source": [
-        "filepath = '/content/drive/MyDrive/Notebook Builds/Next Day Whether Prediction in Australia/weatherAUS.csv'\n",
+        "filepath = 'https://raw.githubusercontent.com/insaid2018/project-gallery/main/data/weatherAUS.csv'\n",
         "data = pd.read_csv(filepath_or_buffer=filepath)\n",
         "print('Data Shape:', data.shape)\n",
         "data.head()"
